v/0.17.0/_sources/examples/04_nowcasting/03_stormscope_goes_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/04_nowcasting/03_stormscope_goes_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_04_nowcasting_03_stormscope_goes_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_04_nowcasting_03_stormscope_goes_example.py:


StormScope Satellite and Radar Nowcasting
=========================================

StormScope inference workflow with GOES satellite imagery and MRMS radar data.

This example will demonstrate how to run coupled inference to generate
predictions using StormScope models with both GOES and MRMS data sources.

In this example you will learn:

- How to instantiate StormScope models for GOES and MRMS
- Creating GOES and MRMS data sources
- Running iterative prognostic forecasts
- Plotting a single GOES channel with MRMS overlay

.. GENERATED FROM PYTHON SOURCE LINES 34-41

.. code-block:: Python

    # /// script
    # dependencies = [
    #   "earth2studio[data,stormscope] @ git+https://github.com/NVIDIA/earth2studio.git@0.17.0",
    #   "cartopy",
    # ]
    # ///








.. GENERATED FROM PYTHON SOURCE LINES 42-57

Set Up
------
This example shows a minimal StormScope workflow with GOES satellite imagery
and MRMS radar data. We build two models:

- :py:class:`earth2studio.models.px.StormScopeGOES` to forecast GOES channels.
- :py:class:`earth2studio.models.px.StormScopeMRMS` to forecast radar
  reflectivity (and a gridded GLM lightning channel).

In the CONUS nowcasting (``3km_10min``) configuration the GOES model is
"pure obs" (no external conditioning), while the MRMS model is conditioned on
GOES — the GOES model provides that conditioning during the rollout via
``call_with_conditioning``. The MRMS model additionally has a GLM lightning
channel (``glm_density``) as part of its state, which we assemble for the
initial condition and which then evolves autoregressively over the rollout.

.. GENERATED FROM PYTHON SOURCE LINES 59-81

.. code-block:: Python

    import os
    from datetime import datetime

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()

    import cartopy.crs as ccrs
    import cartopy.feature as cfeature
    import matplotlib.pyplot as plt
    import numpy as np
    import torch
    from tqdm import trange

    from earth2studio.data import GOES, MRMS, GOESGLMGrid, fetch_data
    from earth2studio.models.px.stormscope import (
        StormScopeBase,
        StormScopeGOES,
        StormScopeMRMS,
    )








.. GENERATED FROM PYTHON SOURCE LINES 82-95

We use the CONUS nowcasting variant (``3km_10min``), the recommended default.
The GOES model is "pure obs" (no external conditioning), forecasting the eight
ABI channels from their recent history. The MRMS model forecasts
``[refc, refc_base, glm_density]`` conditioned on GOES, and additionally
consumes a Geostationary Lightning Mapper (GLM) channel that is both an input
(observation history) and a predicted output. The GLM field comes from
:py:class:`earth2studio.data.GOESGLMGrid`, a gridded 0.1-degree lightning
product; the model bilinearly regrids it onto the model grid internally.

Other selectable variants (see ``StormScope*.list_available_models``):

- "3km_10min": CONUS nowcasting, 3 km / 10 min (recommended, default)
- "6km_1hr": legacy 6 km / 60 min nearcasting

.. GENERATED FROM PYTHON SOURCE LINES 97-131

.. code-block:: Python

    device = torch.device("cuda" if torch.cuda.is_available() else "cpu")

    model_name = "3km_10min"

    package = StormScopeBase.load_default_package()

    # GOES nowcast model: pure-obs, no external conditioning source needed.
    # We enable automatic mixed precision (autocast) and compile the model for faster inference.
    model = StormScopeGOES.load_model(
        package=package,
        conditioning_data_source=None,
        model_name=model_name,
        amp=True,
        compile=True,
    )
    model = model.to(device)
    model.eval()

    # MRMS+GLM nowcast model: conditioned on GOES, with a gridded GLM source. Here
    # we drive it via call_with_conditioning, so glm_data_source is used only to
    # fetch the initial GLM state (via fetch_glm); the bilinear GLM interpolator is
    # built lazily on the first call. (In a standalone __call__/create_iterator run
    # the same glm_data_source would inject GLM automatically each step.)
    model_mrms = StormScopeMRMS.load_model(
        package=package,
        conditioning_data_source=GOES(),
        glm_data_source=GOESGLMGrid(satellite="east"),
        model_name=model_name,
        amp=True,
        compile=True,
    )
    model_mrms = model_mrms.to(device)
    model_mrms.eval()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-08-05 01:41:08.590 | WARNING  | earth2studio.models.px.stormscope:__init__:193 - No conditioning data source was provided to StormScope; set the conditioning_data_source attribute of the model before running inference with iterator mode, or use the call_with_conditioning method.

    StormScopeMRMS(
      (stage_models): ModuleList(
        (0-2): 3 x OptimizedModule(
          (_orig_mod): EDMPreconditioner(
            (model): ConcatConditionWrapper(
              (model): DiT(
                (tokenizer): PatchEmbed2DTokenizer(
                  (x_embedder): PatchEmbed2D(
                    (pad): ZeroPad2d((0, 0, 0, 0))
                    (proj): Conv2d(75, 768, kernel_size=(4, 4), stride=(4, 4))
                  )
                )
                (conditioning_embedder): DiTConditionEmbedder(
                  (t_embedder): PositionalEmbedding(
                    (mlp): Sequential(
                      (0): Linear(in_features=256, out_features=768, bias=True)
                      (1): SiLU()
                      (2): Linear(in_features=768, out_features=768, bias=True)
                    )
                  )
                )
                (detokenizer): ProjReshape2DDetokenizer(
                  (proj_layer): ProjLayer(
                    (proj_layer_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=False, bias=False)
                    (output_projection): Linear(in_features=768, out_features=48, bias=True)
                    (adaptive_modulation): Sequential(
                      (0): SiLU()
                      (1): Linear(in_features=768, out_features=1536, bias=True)
                    )
                  )
                )
                (blocks): ModuleList(
                  (0-15): 16 x DiTBlock(
                    (attention): Natten2DSelfAttention(
                      (qkv): Linear(in_features=768, out_features=2304, bias=True)
                      (q_norm): Identity()
                      (k_norm): Identity()
                      (proj): Linear(in_features=768, out_features=768, bias=True)
                      (attn_drop): Dropout(p=0.0, inplace=False)
                      (proj_drop): Dropout(p=0.0, inplace=False)
                    )
                    (pre_attention_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=False, bias=False)
                    (pre_mlp_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=False, bias=False)
                    (linear): Mlp(
                      (layers): Sequential(
                        (0): Linear(in_features=768, out_features=3072, bias=True)
                        (1): GELU(approximate='tanh')
                        (2): Linear(in_features=3072, out_features=768, bias=True)
                      )
                    )
                    (adaptive_modulation): Sequential(
                      (0): SiLU()
                      (1): Linear(in_features=768, out_features=4608, bias=True)
                    )
                    (drop_path): DropPath(drop_prob=0.000)
                  )
                )
              )
            )
          )
        )
      )
    )



.. GENERATED FROM PYTHON SOURCE LINES 132-139

Setup GOES Data Source and Interpolators
----------------------------------------
We fetch GOES data for the model inputs and build interpolators that map the
GOES grid and GFS grid into the StormScope model grid. StormScope operates on
the HRRR grid, or a downsampled version of it, and for convenience each model
defines grid coordinates `model.latitudes` and `model.longitudes` to help with
the regridding functionality.

.. GENERATED FROM PYTHON SOURCE LINES 141-167

.. code-block:: Python

    start_date = [np.datetime64(datetime(2024, 1, 8, 18, 0, 0))]
    goes_satellite = "goes16"
    scan_mode = "C"

    variables = model.input_coords()["variable"]
    lat_out = model.latitudes.detach().cpu().numpy()
    lon_out = model.longitudes.detach().cpu().numpy()

    goes = GOES(satellite=goes_satellite, scan_mode=scan_mode)
    goes_lat, goes_lon = GOES.grid(satellite=goes_satellite, scan_mode=scan_mode)

    # The GOES nowcast model is pure-obs (no external conditioning), so only an input
    # interpolator (GOES grid -> model grid) is needed.
    model.build_input_interpolator(goes_lat, goes_lon)

    in_coords = model.input_coords()

    # Fetch GOES data (left on the native GOES grid; the model regrids internally)
    x, x_coords = fetch_data(
        goes,
        time=start_date,
        variable=np.array(variables),
        lead_time=in_coords["lead_time"],
        device=device,
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-08-05 01:41:25.930 | WARNING  | earth2studio.models.px.stormscope:build_input_interpolator:643 - Some input gridpoints are invalid after interpolation. This may be expected if the input data source is not available at all gridpoints, but consider double-checking coordinates and/or the max_dist_km parameter. Invalid points will be filled with the model's _INPUT_INVALID_FILL_CONSTANT (0.0).
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]                                                             2026-08-05 01:41:26.359 | DEBUG    | earth2studio.data.goes:fetch_array:356 - Fetching GOES file: noaa-goes16/ABI-L2-MCMIPC/2024/008/17/OR_ABI-L2-MCMIPC-M6_G16_s20240081711170_e20240081713555_c20240081714067.nc
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  1.41it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  1.41it/s]
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]                                                             2026-08-05 01:41:26.773 | DEBUG    | earth2studio.data.goes:fetch_array:356 - Fetching GOES file: noaa-goes16/ABI-L2-MCMIPC/2024/008/17/OR_ABI-L2-MCMIPC-M6_G16_s20240081721170_e20240081723543_c20240081724069.nc
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  3.08it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  3.08it/s]
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]                                                             2026-08-05 01:41:27.175 | DEBUG    | earth2studio.data.goes:fetch_array:356 - Fetching GOES file: noaa-goes16/ABI-L2-MCMIPC/2024/008/17/OR_ABI-L2-MCMIPC-M6_G16_s20240081731170_e20240081733543_c20240081734066.nc
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  3.07it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  3.07it/s]
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]                                                             2026-08-05 01:41:27.560 | DEBUG    | earth2studio.data.goes:fetch_array:356 - Fetching GOES file: noaa-goes16/ABI-L2-MCMIPC/2024/008/17/OR_ABI-L2-MCMIPC-M6_G16_s20240081741170_e20240081743549_c20240081744062.nc
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  3.09it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  3.08it/s]
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]                                                             2026-08-05 01:41:27.956 | DEBUG    | earth2studio.data.goes:fetch_array:356 - Fetching GOES file: noaa-goes16/ABI-L2-MCMIPC/2024/008/17/OR_ABI-L2-MCMIPC-M6_G16_s20240081751170_e20240081753543_c20240081754063.nc
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  2.98it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  2.97it/s]
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]                                                             2026-08-05 01:41:28.573 | DEBUG    | earth2studio.data.goes:fetch_array:356 - Fetching GOES file: noaa-goes16/ABI-L2-MCMIPC/2024/008/18/OR_ABI-L2-MCMIPC-M6_G16_s20240081801170_e20240081803554_c20240081804070.nc
    Fetching GOES data:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  1.83it/s]    Fetching GOES data: 100%|██████████| 1/1 [00:00<00:00,  1.83it/s]




.. GENERATED FROM PYTHON SOURCE LINES 168-181

Setup MRMS + GLM Data Sources and Assemble the State
----------------------------------------------------
The MRMS+GLM model forecasts ``[refc, refc_base, glm_density]``. The radar
channels come from :py:class:`earth2studio.data.MRMS`; the GLM channel comes
from :py:class:`earth2studio.data.GOESGLMGrid`. Because we drive the rollout
with ``call_with_conditioning`` (the coupled path), we own the full initial
state: we fetch radar and GLM, regrid each onto the shared model grid (GLM uses
bilinear regridding, unlike the nearest-neighbor radar/satellite path), and
stack them in the model's ``variables`` order (radar channels first, GLM last).
After the first step GLM flows autoregressively from the model's own
predictions, exactly like the radar channels. (If you instead ran the MRMS
model standalone via ``__call__`` / ``create_iterator``, ``glm_data_source``
would inject GLM automatically and only radar would need to be assembled here.)

.. GENERATED FROM PYTHON SOURCE LINES 183-224

.. code-block:: Python

    mrms = MRMS()
    mrms_in_coords = model_mrms.input_coords()

    # Radar state channels (everything in `variables` that is not a GLM channel)
    radar_vars = np.array(
        [v for v in model_mrms.variables if v not in set(model_mrms.glm_variables)]
    )
    x_radar, x_coords_radar = fetch_data(
        mrms,
        time=start_date,
        variable=radar_vars,
        lead_time=mrms_in_coords["lead_time"],
        device=device,
    )

    # Interpolators: radar/GOES use nearest-neighbor; GLM is built lazily (bilinear)
    # inside fetch_glm.
    model_mrms.build_input_interpolator(x_coords_radar["lat"], x_coords_radar["lon"])
    model_mrms.build_conditioning_interpolator(goes_lat, goes_lon)

    # Regrid the radar channels onto the model grid (nearest-neighbor).
    x_radar = model_mrms.input_interp(x_radar)

    # Fetch + bilinearly regrid the GLM observation window onto the model grid. The
    # returned counts are physical (the model applies log1p internally).
    glm_coords = mrms_in_coords.copy()
    glm_coords["time"] = np.array(start_date)
    x_glm, _ = model_mrms.fetch_glm(glm_coords, device=device)

    # Stack into the full MRMS+GLM state on the model grid, matching `variables` order
    # ([refc, refc_base, glm_density]); the variable axis is dim 2 of [T, L, C, H, W].
    x_mrms = torch.cat([x_radar, x_glm], dim=2).to(dtype=torch.float32)

    # Coords now describe the model grid (y/x) with the full variable list. Start from
    # the fetched radar coords so the dim order matches, then swap in y/x and variables.
    x_coords_mrms = x_coords_radar.copy()
    x_coords_mrms["variable"] = np.array(model_mrms.variables)
    del x_coords_mrms["lat"], x_coords_mrms["lon"]
    x_coords_mrms["y"] = model_mrms.y
    x_coords_mrms["x"] = model_mrms.x





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:41:29.895 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedReflectivityQCComposite_00.50/20240108/MRMS_MergedReflectivityQCComposite_00.50_20240108-171038.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]    Fetching MRMS data:  50%|█████     | 1/2 [00:05<00:05,  5.13s/it]                                                                     2026-08-05 01:41:34.442 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedBaseReflectivityQC_00.50/20240108/MRMS_MergedBaseReflectivityQC_00.50_20240108-170959.grib2.gz
    Fetching MRMS data:  50%|█████     | 1/2 [00:05<00:05,  5.13s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:09<00:00,  4.73s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:09<00:00,  4.79s/it]
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:41:38.958 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedReflectivityQCComposite_00.50/20240108/MRMS_MergedReflectivityQCComposite_00.50_20240108-172040.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:41:43.600 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedBaseReflectivityQC_00.50/20240108/MRMS_MergedBaseReflectivityQC_00.50_20240108-172015.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:04<?, ?it/s]    Fetching MRMS data:  50%|█████     | 1/2 [00:09<00:09,  9.22s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:09<00:00,  4.61s/it]
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:41:48.293 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedBaseReflectivityQC_00.50/20240108/MRMS_MergedBaseReflectivityQC_00.50_20240108-173021.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:41:52.644 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedReflectivityQCComposite_00.50/20240108/MRMS_MergedReflectivityQCComposite_00.50_20240108-173035.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:04<?, ?it/s]    Fetching MRMS data:  50%|█████     | 1/2 [00:08<00:08,  8.96s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:08<00:00,  4.48s/it]
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:41:57.373 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedBaseReflectivityQC_00.50/20240108/MRMS_MergedBaseReflectivityQC_00.50_20240108-174013.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:42:01.977 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedReflectivityQCComposite_00.50/20240108/MRMS_MergedReflectivityQCComposite_00.50_20240108-174040.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:04<?, ?it/s]    Fetching MRMS data:  50%|█████     | 1/2 [00:08<00:08,  8.95s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:08<00:00,  4.47s/it]
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:42:06.428 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedBaseReflectivityQC_00.50/20240108/MRMS_MergedBaseReflectivityQC_00.50_20240108-174945.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:42:11.042 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedReflectivityQCComposite_00.50/20240108/MRMS_MergedReflectivityQCComposite_00.50_20240108-175039.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:04<?, ?it/s]    Fetching MRMS data:  50%|█████     | 1/2 [00:09<00:09,  9.10s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:09<00:00,  4.55s/it]
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:42:15.642 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedBaseReflectivityQC_00.50/20240108/MRMS_MergedBaseReflectivityQC_00.50_20240108-180014.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:00<?, ?it/s]                                                             2026-08-05 01:42:20.246 | INFO     | earth2studio.data.mrms:_fetch_task:297 - Fetching MRMS file: s3://noaa-mrms-pds/CONUS/MergedReflectivityQCComposite_00.50/20240108/MRMS_MergedReflectivityQCComposite_00.50_20240108-180040.grib2.gz
    Fetching MRMS data:   0%|          | 0/2 [00:04<?, ?it/s]    Fetching MRMS data:  50%|█████     | 1/2 [00:09<00:09,  9.04s/it]    Fetching MRMS data: 100%|██████████| 2/2 [00:09<00:00,  4.52s/it]
    2026-08-05 01:42:35.303 | WARNING  | earth2studio.models.px.stormscope:build_input_interpolator:643 - Some input gridpoints are invalid after interpolation. This may be expected if the input data source is not available at all gridpoints, but consider double-checking coordinates and/or the max_dist_km parameter. Invalid points will be filled with the model's _INPUT_INVALID_FILL_CONSTANT (0.0).
    2026-08-05 01:42:38.750 | WARNING  | earth2studio.models.px.stormscope:build_conditioning_interpolator:689 - Some conditioning gridpoints are invalid after interpolation. This may be expected if the conditioning data source is not available at all gridpoints, but consider double-checking coordinates and/or the max_dist_km parameter. Invalid points will be filled with the model's _INPUT_INVALID_FILL_CONSTANT (0.0).
    Listing GLM L2 LCFA prefixes:   0%|          | 0/1 [00:00<?, ?it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.25it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.24it/s]
    2026-08-05 01:42:39.132 | INFO     | earth2studio.data.goes_glm:fetch:346 - [earth2studio.data.goes_glm] discovered 17 unique GLM files across 1 requested times
    Fetching GLM L2 LCFA files:   0%|          | 0/17 [00:00<?, ?it/s]    Fetching GLM L2 LCFA files: 100%|██████████| 17/17 [00:00<00:00, 14355.38it/s]
    Listing GLM L2 LCFA prefixes:   0%|          | 0/1 [00:00<?, ?it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.20it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.20it/s]
    2026-08-05 01:42:39.847 | INFO     | earth2studio.data.goes_glm:fetch:346 - [earth2studio.data.goes_glm] discovered 17 unique GLM files across 1 requested times
    Fetching GLM L2 LCFA files:   0%|          | 0/17 [00:00<?, ?it/s]    Fetching GLM L2 LCFA files: 100%|██████████| 17/17 [00:00<00:00, 14536.83it/s]
    Listing GLM L2 LCFA prefixes:   0%|          | 0/1 [00:00<?, ?it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.02it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.02it/s]
    2026-08-05 01:42:40.611 | INFO     | earth2studio.data.goes_glm:fetch:346 - [earth2studio.data.goes_glm] discovered 17 unique GLM files across 1 requested times
    Fetching GLM L2 LCFA files:   0%|          | 0/17 [00:00<?, ?it/s]    Fetching GLM L2 LCFA files: 100%|██████████| 17/17 [00:00<00:00, 14638.30it/s]
    Listing GLM L2 LCFA prefixes:   0%|          | 0/1 [00:00<?, ?it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.19it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.19it/s]
    2026-08-05 01:42:41.388 | INFO     | earth2studio.data.goes_glm:fetch:346 - [earth2studio.data.goes_glm] discovered 17 unique GLM files across 1 requested times
    Fetching GLM L2 LCFA files:   0%|          | 0/17 [00:00<?, ?it/s]    Fetching GLM L2 LCFA files: 100%|██████████| 17/17 [00:00<00:00, 14945.12it/s]
    Listing GLM L2 LCFA prefixes:   0%|          | 0/1 [00:00<?, ?it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.16it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 1/1 [00:00<00:00,  3.15it/s]
    2026-08-05 01:42:42.172 | INFO     | earth2studio.data.goes_glm:fetch:346 - [earth2studio.data.goes_glm] discovered 17 unique GLM files across 1 requested times
    Fetching GLM L2 LCFA files:   0%|          | 0/17 [00:00<?, ?it/s]    Fetching GLM L2 LCFA files: 100%|██████████| 17/17 [00:00<00:00, 14433.84it/s]
    Listing GLM L2 LCFA prefixes:   0%|          | 0/2 [00:00<?, ?it/s]    Listing GLM L2 LCFA prefixes:  50%|█████     | 1/2 [00:00<00:00,  3.14it/s]    Listing GLM L2 LCFA prefixes: 100%|██████████| 2/2 [00:00<00:00,  5.87it/s]
    2026-08-05 01:42:43.011 | INFO     | earth2studio.data.goes_glm:fetch:346 - [earth2studio.data.goes_glm] discovered 17 unique GLM files across 1 requested times
    Fetching GLM L2 LCFA files:   0%|          | 0/17 [00:00<?, ?it/s]    Fetching GLM L2 LCFA files: 100%|██████████| 17/17 [00:00<00:00, 14692.60it/s]




.. GENERATED FROM PYTHON SOURCE LINES 225-229

Add Batch Dimension
-------------------
The models expect a batch dimension: [B, T, L, C, H, W]. Up to GPU memory limits,
this can be increased to produce multiple ensemble members.

.. GENERATED FROM PYTHON SOURCE LINES 231-244

.. code-block:: Python

    batch_size = 1
    if x.dim() == 5:
        x = x.unsqueeze(0).repeat(batch_size, 1, 1, 1, 1, 1)
        x_coords["batch"] = np.arange(batch_size)
        x_coords.move_to_end("batch", last=False)
    if x_mrms.dim() == 5:
        x_mrms = x_mrms.unsqueeze(0).repeat(batch_size, 1, 1, 1, 1, 1)
        x_coords_mrms["batch"] = np.arange(batch_size)
        x_coords_mrms.move_to_end("batch", last=False)

    x = x.to(dtype=torch.float32)
    x_mrms = x_mrms.to(dtype=torch.float32)








.. GENERATED FROM PYTHON SOURCE LINES 245-252

Execute the Workflow
--------------------
Since the StormScope coupled inference is a bit more involved, we will use
a custom forecast loop rather than a built-in workflow. Here, the GOES model
predicts future satellite imagery, and the MRMS model predicts radar
reflectivity (and GLM) conditioned on GOES (initially the raw data, then the
forecasted GOES imagery) via ``call_with_conditioning``.

.. GENERATED FROM PYTHON SOURCE LINES 254-275

.. code-block:: Python

    y, y_coords = x, x_coords
    y_mrms, y_coords_mrms = x_mrms, x_coords_mrms

    n_steps = 2
    for step_idx in trange(n_steps, desc="Forecast steps"):
        # Run one prognostic step with the GOES model
        y_pred, y_pred_coords = model(y, y_coords)

        # Run one prognostic step with the MRMS model conditioned on GOES
        y_mrms_pred, y_coords_mrms_pred = model_mrms.call_with_conditioning(
            y_mrms, y_coords_mrms, conditioning=y, conditioning_coords=y_coords
        )

        # Advance the sliding window for the next step: drop the oldest input frame
        # and append the new prediction. We assign directly into the loop carry
        # variables (y/y_mrms) and keep y_pred/y_mrms_pred pointing at the single
        # latest prediction (lead time +step), which is what we plot below.
        y, y_coords = model.next_input(y_pred, y_pred_coords, y, y_coords)
        y_mrms, y_coords_mrms = model_mrms.next_input(
            y_mrms_pred, y_coords_mrms_pred, y_mrms, y_coords_mrms
        )




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Forecast steps:   0%|          | 0/2 [00:00<?, ?it/s]    Forecast steps:  50%|█████     | 1/2 [01:50<01:50, 110.27s/it]    Forecast steps: 100%|██████████| 2/2 [03:38<00:00, 108.90s/it]    Forecast steps: 100%|██████████| 2/2 [03:38<00:00, 109.11s/it]




.. GENERATED FROM PYTHON SOURCE LINES 276-280

Post Processing
---------------
Let's plot the final forecast step: GOES abi13c (Clean IR 10.35um) in
grayscale with MRMS reflectivity (refc) overlaid.

.. GENERATED FROM PYTHON SOURCE LINES 282-359

.. code-block:: Python

    goes_channel = "abi13c"
    goes_ch_idx = list(model.variables).index(goes_channel)
    mrms_ch_idx = list(model_mrms.variables).index("refc")

    # Nan-fill invalid gridpoints
    y_pred = torch.where(model.valid_mask, y_pred, torch.nan)
    y_mrms_pred = torch.where(model_mrms.valid_mask, y_mrms_pred, torch.nan)

    # Prepare HRRR Lambert Conformal projection
    proj_hrrr = ccrs.LambertConformal(
        central_longitude=262.5,
        central_latitude=38.5,
        standard_parallels=(38.5, 38.5),
        globe=ccrs.Globe(semimajor_axis=6371229, semiminor_axis=6371229),
    )
    plt.figure(figsize=(9, 6))
    ax = plt.axes(projection=proj_hrrr)

    # Dual layer coast/state lines for better day/night visibility
    # Black halo (thicker)
    ax.coastlines(color="black", linewidth=1.2)
    ax.add_feature(cfeature.STATES, edgecolor="black", linewidth=1.0)

    # White inner line (thinner)
    ax.coastlines(color="white", linewidth=0.4)
    ax.add_feature(cfeature.STATES, edgecolor="white", linewidth=0.3)

    field = y_pred[0, 0, 0, goes_ch_idx].detach().cpu().numpy()
    im = ax.pcolormesh(
        lon_out,
        lat_out,
        field,
        transform=ccrs.PlateCarree(),
        cmap="gray_r",
        shading="auto",
    )

    # Overlay MRMS on top of GOES
    field_mrms = y_mrms_pred[0, 0, 0, mrms_ch_idx]
    field_mrms = (
        torch.where(~model.valid_mask, torch.nan, field_mrms).detach().cpu().numpy()
    )
    field_mrms = np.where(field_mrms <= 0, np.nan, field_mrms)
    im_mrms = ax.pcolormesh(
        lon_out,
        lat_out,
        field_mrms,
        transform=ccrs.PlateCarree(),
        cmap="inferno",
        shading="auto",
        vmin=0.0,
        vmax=55.0,
    )
    plt.colorbar(
        im,
        label="GOES Clean IR 10.35um [K]",
        orientation="horizontal",
        pad=0.05,
        shrink=0.5,
    )
    plt.colorbar(
        im_mrms,
        label="MRMS Reflectivity [dBZ]",
        orientation="horizontal",
        pad=0.1,
        shrink=0.5,
    )

    time = y_pred_coords["time"][0].item()
    lead_time = y_pred_coords["lead_time"][0]
    plt.title(
        f"Predicted GOES {goes_channel} with MRMS overlay from {time} UTC "
        f"initialization (lead {lead_time.astype('timedelta64[m]').item()})"
    )

    plt.tight_layout()
    plt.savefig("outputs/03_stormscope_goes_example.png", dpi=300)



.. image-sg:: /examples/04_nowcasting/images/sphx_glr_03_stormscope_goes_example_001.png
   :alt: Predicted GOES abi13c with MRMS overlay from 2024-01-08 18:00:00 UTC initialization (lead 0:20:00)
   :srcset: /examples/04_nowcasting/images/sphx_glr_03_stormscope_goes_example_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (5 minutes 37.815 seconds)


.. _sphx_glr_download_examples_04_nowcasting_03_stormscope_goes_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03_stormscope_goes_example.ipynb <03_stormscope_goes_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03_stormscope_goes_example.py <03_stormscope_goes_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 03_stormscope_goes_example.zip <03_stormscope_goes_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
